--- a/config.json
+++ b/config.json
@@ -3,11 +3,14 @@
     "MNIST_INPUT_SHAPE": [28,28,1], 
     "SMALLNORB_INPUT_SHAPE": [48,48,2],
     "MULTIMNIST_INPUT_SHAPE": [36,36,1],
+    "DEEPFAKE_INPUT_SHAPE": [36,36,3],
+    "image_height": 36,
+    "image_width": 36,
     "lr": 5e-4,
     "lmd_gen": 0.392,
     "lr_dec": 0.97,
     "batch_size": 16,
-    "epochs":150,
+    "epochs":20,
     "saved_model_dir": "bin",
     "tb_log_save_dir": "logs",
     "mnist_path": "mnist.npz",
